--- a/res.qrc
+++ b/res.qrc
@@ -1,9 +1,3 @@
 <RCC>
-    <qresource prefix="/">
-        <file>res/lol001.png</file>
-        <file>res/lolally.png</file>
-        <file>res/lolenemy.png</file>
-        <file>res/lolme.png</file>
-        <file>res/lolkeg.png</file>
-    </qresource>
+    <qresource prefix="/"/>
 </RCC>
